 - GB Video: Fix window being enabled mid-scanline (fixes mgba.io/i/1328)
 - GB I/O: Filter IE top bits properly (fixes mgba.io/i/1329)
 - GBA Video: Fix scanline cache with scale factor change edge cases
 - GBA DMA: Fix DMA0-2 lengths (fixes mgba.io/i/1344)
 - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)
 - GB Video: Fix more window edge cases (fixes mgba.io/i/1346)
Other fixes:
 - Qt: More app metadata fixes
 - Qt: Fix load recent from archive (fixes mgba.io/i/1325)
 - LR35902: Fix disassembly of several CB-prefix instructions
 - Qt: Fix overrides getting discarded (fixes mgba.io/i/1354)
 - Qt: Fix saved scale not getting set on resize (fixes mgba.io/i/1074)
 - CMake: Fix .deb imagemagick dependencies
 - Qt: Fix crash in sprite viewer magnification (fixes mgba.io/i/1362)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
 - LR35902: Support PC-relative opcode decoding
 - Qt: Improve camera initialization
 - Qt: Support switching webcams
 - Core: Add keysRead callback

0.7.1: (2019-02-24)
Bugfixes:
 - 3DS: Work around menu freezing (fixes mgba.io/i/1294)
 - GB: Fix crash when accessing SRAM if no save loaded and cartridge has no SRAM
 - GB Serialize: Fix loading states with negative pixel x (fixes mgba.io/i/1293)
 - GB, GBA Serialize: Fix loading two states in a row
 - GBA: Fix video timing when skipping BIOS (fixes mgba.io/i/1318)
 - GBA DMA: Fix Display Start DMAs
 - GBA DMA: Fix DMA start/end timing
 - GBA DMA: Fix invalid DMA handling (fixes mgba.io/i/1301)
 - GBA Memory: Fix a few AGBPrint crashes
 - GBA Memory: Fix OOB ROM reads showing up as AGBPrint memory
 - GBA SIO: Prevent writing read-only multiplayer bits